--- a/index.html
+++ b/index.html
@@ -3,40 +3,123 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome</title>
+  <title>Project Overview</title>
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
-    .container {
-      text-align: center;
-      padding: 40px;
-      border-radius: 8px;
-      background-color: #fff;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-    h1 {
-      font-size: 48px;
-      margin-bottom: 20px;
-      color: #333;
-    }
-    p {
-      font-size: 24px;
-      color: #666;
+    body { margin:0; font-family: Arial, sans-serif; line-height: 1.6; background-color:#f5f5f5; color:#333; }
+    header { background: #333; color: #fff; padding: 20px 0; }
+    .container { width: 90%; max-width: 1200px; margin: auto; }
+    nav { display:flex; justify-content: space-between; align-items: center; }
+    nav ul { list-style: none; display:flex; gap:20px; margin:0; padding:0; }
+    nav a { color:#fff; text-decoration:none; font-weight:bold; }
+    .logo { font-size: 24px; font-weight:bold; }
+    section { padding: 60px 0; }
+    .hero { background:#007acc; color:#fff; text-align:center; padding: 100px 20px; }
+    .hero h1 { font-size:48px; margin-bottom:20px; }
+    .hero p { font-size:20px; margin-bottom:30px; }
+    .btn { background:#fff; color:#007acc; padding: 10px 20px; border-radius:4px; text-decoration:none; font-weight:bold; margin:0 5px; }
+    .section-title { text-align:center; margin-bottom:40px; }
+    .cards { display:flex; flex-wrap:wrap; gap:20px; justify-content:center; }
+    .card { background:#fff; border-radius:8px; padding:20px; box-shadow:0 2px 4px rgba(0,0,0,0.1); width:280px; }
+    .timeline { display:flex; flex-direction:column; gap:20px; max-width:600px; margin:auto; }
+    .timeline-item { background:#fff; border-left:4px solid #007acc; padding:10px 20px; border-radius:4px; }
+    footer { background:#333; color:#fff; padding:20px 0; text-align:center; }
+    @media (max-width:768px) {
+      nav ul { flex-direction:column; gap:10px; }
+      .cards { flex-direction:column; align-items:center; }
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Hello!</h1>
-    <p>Our website is coming soon. Stay tuned.</p>
-  </div>
+  <header>
+    <div class="container">
+      <nav>
+        <div class="logo">Project Name</div>
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#assets">Assets</a></li>
+          <li><a href="#roadmap">Roadmap</a></li>
+          <li><a href="#team">Team</a></li>
+          <li><a href="#docs">Docs</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <section class="hero">
+    <div class="container">
+      <h1>Project Tagline Placeholder</h1>
+      <p>Brief mission statement or key message goes here to capture attention.</p>
+      <a href="#" class="btn">Download Pitch Deck</a>
+      <a href="#" class="btn">Join Mailing List</a>
+    </div>
+  </section>
+
+  <section id="about">
+    <div class="container">
+      <h2 class="section-title">About the Project</h2>
+      <p>Placeholder text about mission, vision, and what problem this project solves. You can expand this section with more details as they become available.</p>
+    </div>
+  </section>
+
+  <section id="assets">
+    <div class="container">
+      <h2 class="section-title">Digital Assets</h2>
+      <div class="cards">
+        <div class="card"><h3>Logo Pack</h3><p>Placeholder for logo files and branding guidelines.</p></div>
+        <div class="card"><h3>Pitch Deck</h3><p>Placeholder for the latest investor or sales deck.</p></div>
+        <div class="card"><h3>Screenshots</h3><p>Placeholder for project screenshots or demo images.</p></div>
+        <div class="card"><h3>Demo Video</h3><p>Placeholder for a demo video link or embed.</p></div>
+        <div class="card"><h3>NFT/Token Art</h3><p>Placeholder for token artwork or NFT samples.</p></div>
+        <div class="card"><h3>GitHub Repo</h3><p>Placeholder link to relevant code repositories.</p></div>
+      </div>
+    </div>
+  </section>
+
+  <section id="roadmap">
+    <div class="container">
+      <h2 class="section-title">Roadmap</h2>
+      <div class="timeline">
+        <div class="timeline-item"><strong>Q1 YYYY</strong> – Placeholder milestone description goes here.</div>
+        <div class="timeline-item"><strong>Q2 YYYY</strong> – Placeholder milestone description goes here.</div>
+        <div class="timeline-item"><strong>Q3 YYYY</strong> – Placeholder milestone description goes here.</div>
+        <div class="timeline-item"><strong>Q4 YYYY</strong> – Placeholder milestone description goes here.</div>
+      </div>
+    </div>
+  </section>
+
+  <section id="team">
+    <div class="container">
+      <h2 class="section-title">Our Team</h2>
+      <div class="cards">
+        <div class="card"><h3>Role 1</h3><p>Placeholder for team member name and bio.</p></div>
+        <div class="card"><h3>Role 2</h3><p>Placeholder for team member name and bio.</p></div>
+        <div class="card"><h3>Role 3</h3><p>Placeholder for team member name and bio.</p></div>
+      </div>
+    </div>
+  </section>
+
+  <section id="docs">
+    <div class="container">
+      <h2 class="section-title">Docs & Whitepaper</h2>
+      <p>Placeholder for download links to whitepapers, technical documentation, and other resources.</p>
+      <a href="#" class="btn">Download Whitepaper</a>
+    </div>
+  </section>
+
+  <section id="contact">
+    <div class="container">
+      <h2 class="section-title">Contact Us</h2>
+      <p>Placeholder for email address, contact form or social media links.</p>
+      <p>Email: <a href="mailto:info@example.com">info@example.com</a></p>
+      <p>Twitter: <a href="#">@projecthandle</a></p>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <p>© YYYY Project Name. All rights reserved. | Placeholder for legal disclaimer and other small print.</p>
+    </div>
+  </footer>
 </body>
 </html>
